# karlsruhe-garbage-calendar

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  fly.toml
.docker/: deploy.dockerfile  dev.dockerfile
kgc_cli/: Cargo.toml
kgc_cli/src/: main.rs
kgc_core/: Cargo.toml
kgc_core/src/: garbage_client.rs  lib.rs
kgc_core/src/garbage_client/tests/: ical_calendar.ics  response.html
kgc_server/: Cargo.toml
kgc_server/frontend/: Cargo.toml  index.html
kgc_server/frontend/src/: main.rs
kgc_server/src/: handler.rs  main.rs
kgc_server/src/route/: calendar.rs
kgc_server/src/route/calendar/: bulky.rs  organic.rs  paper.rs  recyclable.rs  residual.rs
src/: cli.rs  garbage_client.rs  handler.rs  main.rs
src/garbage_client/tests/: response.html
