[package]
name = "karlsruhe-garbage-calendar"
version = "1.0.1"
edition = "2021"
rust-version = "1.70"
license = "MIT"

[dependencies.anyhow]
version = "^1.0"

[dependencies.axum]
version = "^0.6"

[dependencies.bitmask-enum]
version = "^2.1"

[dependencies.chrono]
version = "^0.4"

[dependencies.ical]
version = "^0.8"
default-features = false
features = ["ical", "generator"]

[dependencies.regex]
version = "^1.8"

[dependencies.reqwest]
version = "^0.11"

[dependencies.scraper]
version = "^0.16"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.tokio]
version = "^1.28"
features = ["full"]
