[workspace]
members = [
    "kgc_core",
    "kgc_server",
    "kgc_cli",
]

[workspace.dependencies.anyhow]
version = "^1.0"

[workspace.dependencies.tokio]
version = "^1.28"
features = ["full"]

[patch.crates-io]
bitmask-enum = { git = "https://github.com/Toromyx/rust-bitmask-enum.git", branch = "feature/#6" }
