[package]
name = "kgc_cli"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"

[dependencies]
kgc_core = { path = "../kgc_core" }

[dependencies.anyhow]
version = "^1.0"

[dependencies.clap]
version = "^4.3"
features = ["derive"]

[dependencies.tokio]
version = "^1.28"
features = ["full"]
