[package]
name = "kgc_core"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"

[dependencies.anyhow]
version = "^1.0"

[dependencies.bitmask-enum]
version = "^2.1"

[dependencies.chrono]
version = "^0.4"

[dependencies.ical]
version = "^0.8"
default-features = false
features = ["ical", "generator"]

[dependencies.regex]
version = "^1.8"

[dependencies.reqwest]
version = "^0.11"

[dependencies.scraper]
version = "^0.16"

[dev-dependencies.tokio]
version = "^1.28"
features = ["full"]
