[package]
name = "kgc_core"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"

[dependencies.anyhow]
workspace = true

[dependencies.bitmask-enum]
version = "^2.1"

[dependencies.chrono]
version = "^0.4"

[dependencies.ical]
version = "^0.8"
default-features = false
features = ["ical", "generator"]

[dependencies.regex]
version = "^1.8"

[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["rustls-tls"]

[dev-dependencies.tokio]
workspace = true
