[package]
name = "kgc_server"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"

[dependencies]
kgc_core = { path = "../kgc_core" }

[dependencies.axum]
version = "^0.6"

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.tokio]
workspace = true

[dependencies.tower-http]
version = "^0.4"
features = ["fs"]
