[package]
name = "kgc_server_frontend"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
license = "MIT"

[dependencies.wasm-bindgen]
version = "^0.2"

[dependencies.web-sys]
version = "^0.3"
features = ["Url", "UrlSearchParams", "Location"]

[dependencies.yew]
version = "^0.20"
features = ["csr"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "^0.2"
log = "^0.4"
